<resources>
    <string name="app_name">QA_App</string>
    <string name="action_settings">Settings</string>

    <!-- ログイン画面用文字列 -->
    <string name="login_email_hint">メールアドレス</string>
    <string name="login_pass_hint">パスワード（6文字以上）</string>
    <string name="login_name_hint">表示名</string>
    <string name="login_create_button_text">アカウント作成</string>

    <string name="login_title">ログイン</string>
    <string name="create_account_failure_message">アカウント作成に失敗しました</string>
    <string name="login_failure_message">ログインに失敗しました</string>
    <string name="login_error_message">正しく入力してください</string>

    <!-- ドロワー・メニュー用文字列 -->
    <string name="genre_select_label">ジャンル選択</string>
    <string name="menu_hobby_label">趣味</string>
    <string name="menu_life_label">生活</string>
    <string name="menu_health_label">健康</string>
    <string name="menu_computer_label">コンピューター</string>

    <!-- 設定画面用文字列 -->
    <string name="settings_title">設定</string>
    <string name="change_name_hint">表示名</string>
    <string name="menu_change_button_label">変更</string>
    <string name="menu_logout_label">ログアウト</string>

    <string name="no_login_user">ログインしていません</string>
    <string name="change_display_name">表示名を変更しました</string>
    <string name="logout_complete_message">ログアウトしました</string>

    <!-- 質問投稿画面用文字列 -->
    <string name="title_label">タイトル</string>
    <string name="question_contents">質問内容</string>
    <string name="image_view_label">添付画像</string>
    <string name="send_button_label">投稿</string>

    <string name="question_send_title">質問作成</string>
    <string name="input_title">タイトルを入力してください</string>
    <string name="question_message">質問を入力してください</string>
    <string name="get_image">画像を取得</string>
    <string name="question_send_error_message">投稿に失敗しました</string>
    <string name="question_no_select_genre">ジャンルを選択してください</string>
    <!-- 回答投稿画面用文字列 -->
    <string name="answer_text_label">回答</string>
    <string name="post_button_label">投稿</string>

    <string name="send_answer_failure">投稿に失敗しました</string>
    <string name="answer_error_message">回答を入力してください</string>
</resources>