<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="@string/login_email_hint"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="@string/login_pass_hint"
            android:hint="@string/login_pass_hint"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="@string/login_name_hint"
            android:hint="@string/login_name_hint"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_button"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_button"
            android:text="@string/login_create_button_text"
            android:textColor="@android:color/white"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>