<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".SettingActivity">

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="@string/change_name_hint"
        android:hint="@string/change_name_hint"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_button"
        android:text="@string/menu_change_button_label"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_button"
        android:text="@string/menu_logout_label"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</LinearLayout>