<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".QuestionSendActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_label" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/titleTextView"
        android:layout_alignParentStart="true"
        android:autofillHints=""
        android:gravity="top"
        android:inputType="text"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/titleText"
        android:layout_alignParentStart="true"
        android:text="@string/question_contents" />

    <EditText
        android:id="@+id/bodyText"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:autofillHints=""
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="10"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/bodyText"
        android:layout_alignParentStart="true"
        android:text="@string/image_view_label" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:background="#d3d3d3"
        android:contentDescription="@string/image_view_label" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button"
        android:text="@string/send_button_label"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sendButton"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>